<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/builderoptions"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:scrollbars="vertical" >
	
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/scenario_list" />
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="0dp"
	    android:layout_weight="1" >
        <ListView android:id="@+id/scenario_list" 
            android:layout_width="fill_parent"
	        android:layout_height="fill_parent" />
    </LinearLayout>
    
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/scenario_new" />
    
    <EditText android:id="@+id/scenario_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/scenario_name" />
    
    <EditText android:id="@+id/scenario_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/scenario_time"/>
	
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/builder_background" />
    
    <LinearLayout android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1" >
        <ListView android:id="@+id/images_list" 
            android:layout_width="fill_parent"
	        android:layout_height="fill_parent" />
    </LinearLayout>
    
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/boss_list" />
    
    <LinearLayout android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1" >
        <ListView android:id="@+id/boss_list" 
            android:layout_width="fill_parent"
	        android:layout_height="fill_parent" />
    </LinearLayout>
    
    <Button android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	    android:text="@string/button_next"
	    android:onClick="next" />
    
</LinearLayout>